--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ layout: landing
 						<div class="inner">
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
+							<p>Request Housing now. Call <a href="tel:203-993-4389">203-993-4389</a></p>
 							<!--
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
@@ -63,6 +64,7 @@ layout: landing
 									</li>
 									-->
 								</ul>
+								<p>At IHP, we are your boots on the ground to provide you and your family the undivided attention they deserve.</p>
 	
 								<!--
 							<ul class="icons major">
