--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: landing
 					<section id="banner">
 						<div class="inner">
 							<h2>{{ site.title }}</h2>
-							<p>{{ site.description | markdownify }}</p>
-							<p>Request Housing now. Call <a href="tel:203-993-4389">203-993-4389</a></p>
+							<h3>{{ site.description | markdownify }}</h3>
+							<h3>Request Housing now. Call <a href="tel:203-993-4389">203-993-4389</a></h3>
 							<!--
 							<ul class="actions">
 								<li><a href="#" class="button special">Activate</a></li>
